k8s/apps/excalidraw/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    app: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: excalidraw
    spec:
      containers:
        - name: excalidraw
          image: excalidraw/excalidraw:latest
          ports:
            - containerPort: 5000
              name: http

          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 1000M
