k8s/apps/excalidraw/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
