k8s/apps/excalidraw/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  namespace: excalidraw
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &domain excalidraw.${CLUSTER_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - *domain
      secretName: excalidraw-tls
  rules:
    - host: *domain
      http:
        paths:
          - backend:
              service:
                name: excalidraw
                port:
                  number: 5000
            path: /
            pathType: Prefix
